# fgread-py

./: .gitignore  .gitmodules  .travis.yml  README.md  pyproject.toml
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst  intro.md
docs/source/_static/css/: custom.css
fgread/: __init__.py  dataset.py  helpers.py  read.py  readers.py  readers_old.py  scanpy_read_10x.py
readfg/: __init__.py  read.py  readers.py
tests/: conftest.py  test_anndata.py  test_errors.py  test_list.py
