[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "fgread"
author = "FASTGenomics Team"
author-email = "contact@fastgenomics.org"
description-file = 'README.md'
home-page = 'https://github.com/fastgenomics/jupyter-fgread-py'
requires-python = '~=3.6'
requires=[
    "anndata ~= 0.6",
    'get_version ~=2.1',
    "tables ~= 3.6",
    "loompy ~= 3.0",
    "scanpy ~= 1.4.4",
    "pandas >= 0.25",
    "deprecated >= 1.2"
]


[tool.flit.metadata.requires-extra]
test = [
    "pytest >= 4"
]
