[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "fgread"
author = "FASTGenomics Team"
author-email = "contact@fastgenomics.org"
description-file = 'README.md'
home-page = 'https://github.com/FASTGenomics/fgread-py'
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = '~=3.6'
requires=[
    "anndata ~= 0.6",
    'get_version ~=2.1',
    "tables ~= 3.6",
    "loompy ~= 3.0",
    "scanpy ~= 1.4",
    "pandas >= 0.25"
]

[tool.flit.metadata.urls]
Documentation = "https://fgread-py.readthedocs.io/en/stable/"


[tool.flit.metadata.requires-extra]
test = [
    "pytest >= 4"
]
